# 2016DIP

./: README.md
2.6.5Image Registration/2detection/: 4.depend
2.6.5Image Registration/4registration/: registration.layout
Chap2Fundamentals/2.4.3SpatialAndIntensityResloution-JiangShanchen/Intencity Resolution/: main.cpp  main.hpp
Chap2Fundamentals/2.4.3SpatialAndIntensityResloution-TanLin/IntensityResolution/: k=1.tif  k=2.tif  k=3.tif  k=4.tif  k=5.tif  k=6.tif  k=7.tif  k=8.tif  main.cpp
Chap2Fundamentals/2.4.3SpatialAndIntensityResloution-TanLin/SptialResolution/: 150dpi.tif  300dpi.tif  72dpi.tif  main.cpp
Chap2Fundamentals/2.4.3SpatialandIntensityResolution-DingHao/ReduceResolution/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  processing
Chap2Fundamentals/2.4.3SpatialandIntensityResolution-DingHao/VaryIntensityLevels/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  (+1 more)
Chap2Fundamentals/2.4.4ImageInterpolation-FanJiaoJiao/: ImageInterpolation.cbp  ImageInterpolation.depend  ImageInterpolation.layout  main.cpp
Chap2Fundamentals/2.4.4ImageInterpolation-TanLin/: interpolation.docx
Chap2Fundamentals/2.6.3ArthmeticOperations-DingHao/Div/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  processing
Chap2Fundamentals/2.6.4SetAndLogicalOperations-TanLin/: CMakeCache.txt  Makefile  cmake_install.cmake  example  main.cpp
Chap3Fundamentals/3.2.1ImageNegatives-JiangShanchen/: main.cpp
Chap3Fundamentals/3.2.1ImageNegatives-TanLin/: CMakeLists.txt
Chap3Fundamentals/3.2.3GammaTransformation-JiangShanchen/: main.cpp
(+163 files in other folders)
